<resources>
    <string name="app_name">Impresa Insights</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">Welcome to</string>
    <string name="entreinfo">IMPRESA INSIGHTS</string>
    <string name="survey">Survey App</string>
    <string name="new_client">New Client</string>
    <string name="existing_client">Existing Client</string>
    <string name="correction">Correction</string>
    <string name="login_button">Login</string>
    <string name="title_activity_language">language</string>
    <string name="logout_title">Logout</string>
    <string name="logout_message">Are you sure yo want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wrong_password">Wrong UserName or Password. Try again!!</string>
    <string name="failure">Failure</string>
    <string name="LoginMessage">Login In...</string>
    <string name="Error">Error</string>
    <string name="LoginEmptyFieldMessage">Username and Password cannot be empty</string>
    <string name="updating">Updating Data</string>
    <string name="uploadingAnswers">Uploading answers</string>
    <string name="info">Info</string>
    <string name="saveAndExit">Are you sure you want to Save and Exit?</string>
    <string name="dataLost">Are you sure you want to exit? All the data will be lost</string>
    <string name="emptyField">Field cannot be empty!!</string>
    <string name="validNumber">Phone number must be 10 digits long!!</string>
    <string name="validEmail">Please enter valid email!!</string>
    <string name="validRadio">Select one from the options!!</string>
    <string name="validImage">Select photo from the gallery!!</string>
    <string name="tankYou">Thank You</string>
    <string name="surveyCompleted">", Survey is completed. Do you want to Save And Exit?"</string>
    <string name="placeholder">Please specify</string>
    <string name="placeholderPhone">Please enter phone number with country code</string>
    <string name="placeholderYearMonth">YY/MM</string>
    <string name="selectPhoto">Please select Photo</string>
    <string name="selectDate">Please select Date</string>
    <string name="newClientMessage">If you are a new Client ,Please register yourself through Recruitment Survey.</string>
    <string name="surveyTaken">Survey already taken.</string>
    <string name="emptySurveyTable">Please Logout and login to update survey data.</string>
    <string name="recallNumber">Tell the respondent to concentrate and do her best to remember ALL of the digits in each number that is displayed.  Before you begin, make sure that the respondent can clearly see the screen.  After the first number is displayed and the respondent reads it aloud, then the survey will wait 10 SECONDS with the number visible on the screen.  Then the survey will proceed to the next page where the number is no longer visible.  Ask the respondent to recall the digits. YOU should type the respondent’s answer into the entry field then move to the next question. </string>
    <string name="large_text">
        "\nHello, my name is surveyor test, and Iwork with Innovations for Poverty Action(IPA) on a"
        "project to learn more about small business owners in your area. Through this project we "
        "hope to assist entrepreneurs in growing their businesses. We would like to ask you a few"
        "questions about you and your main business.\n\n"
        "Please note:\n\n"
        "1. Your participation is voluntary.\n\n"
        "2. There are no risks involved in completing this survey, either to you or your business.\n\n"
        "3. Your information will always remain confidential and well protected. No information "
        "will be shared with any third party, and no names will be published from the study.\n\n"
        "4. You should be as honest and accurate with your answers as possible as this information"
        "will be used to develop products and services that better meet the needs of small business"
        "owners like you.\n\n"
        "5. You can choose not to answer a question, or to stop the survey at any time.This will pose"
        " no risk to you or your business.\n\n"
        "6. This survey should take approximately 35 minutes of your time, depending on how you respond.\n\n"
        "By agreeing, you confirm that you understood the information above and have agreed to complete"
        " to complete the survey.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>
