<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/bg"
    tools:context="com.example.codemaven3015.sampleapplogin.MainActivity">


    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:padding="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="20dp"
            android:scaleType="center"
            app:srcCompat="@drawable/logo"
            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="2dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#B3434345"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="178dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="0dp"
                app:srcCompat="@drawable/usericon" />

            <EditText
                android:id="@+id/editText_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/imageView2"
                android:layout_toRightOf="@+id/imageView2"
                android:background="#BF09abd2"
                android:clickable="true"
                android:ems="10"
                android:hint="@string/prompt_username"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="#ffffff"
                android:textColorHighlight="#f8f8f8"
                android:textColorHint="#e7e7e7"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="#B3434345"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="238dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:srcCompat="@drawable/passwordicon" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imageView3"
                android:background="#BF09abd2"
                android:clickable="true"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="#ffffff"
                android:textColorHighlight="#f8f8f8"
                android:textColorHint="#e7e7e7"
                android:textSize="20sp" />

        </RelativeLayout>

        <CheckBox
            android:id="@+id/rememberMeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:buttonTint="@color/colorAccent"
            android:elevation="1dp"
            android:text="Remember Me"
            android:textColor="@color/darkgrey"
            android:textSize="16sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.07"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="327dp">

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CCfe6868"
                android:onClick="onLoginClick"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/login_button"
                android:textColor="#ffffff"
                android:textSize="22sp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="302dp" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
